--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^9.32.0",
     "typescript": "^5.9.2",
     "@vscode/test-cli": "^0.0.11",
-    "@vscode/test-electron": "^2.5.2"
+    "@vscode/test-electron": "^2.5.2",
+    "@antfu/eslint-config": "^5.2.2"
   }
 }
