Finished Analyze Selection UX / UI
Some issues found:

triple-clicking a line in vscode, will make it select with a new line, which is a bit trouble some.

Currently the code works so that selecting, like clicking and hovering over the text works.

Currently it just reverses the current code, and should be replaced with an actually http service call.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,14 @@
   "contributes": {
     "commands": [
       {
+        "command": "gim.acceptChanges",
+        "title": "Accept Suggestion",
+        "icon": {
+          "light": "resources/light/check.svg",
+          "dark": "resources/dark/check.svg"
+        }
+      },
+      {
         "command": "gim.selection.docstring",
         "title": "GIM: Docstring from Selection"
       },
@@ -29,7 +37,16 @@
         "command": "gim.file.analyze",
         "title": "GIM: Analyze Current File"
       }
-    ]
+    ],
+    "menus": {
+      "editor/title": [
+        {
+          "command": "gim.acceptChanges",
+          "group": "navigation",
+          "when": "isInDiffEditor && resourceScheme == gim-diff"
+        }
+      ]
+    }
   },
   "scripts": {
     "vscode:prepublish": "pnpm run compile",
