--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+sqlite-server/database.db
