--- a/ai-server/pyproject.toml
+++ b/ai-server/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.117.1",
     "ollama>=0.5.4",
+    "requests>=2.32.5",
     "uvicorn>=0.37.0",
 ]
